--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@supabase/supabase-js": "^2.45.4",
     "framer-motion": "^11.8.0",
     "lucide-react": "^0.446.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
