--- a/app/package.json
+++ b/app/package.json
@@ -15,12 +15,18 @@
     "@emotion/styled": "^11.13.0",
     "@remotion/player": "^4.0.213",
     "framer-motion": "^11.8.0",
+    "konva": "^9.3.15",
+    "lodash": "^4.17.21",
+    "lodash.throttle": "^4.1.1",
+    "peaks.js": "^3.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "remotion": "^4.0.213"
+    "remotion": "^4.0.213",
+    "waveform-data": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/node": "^22.7.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
