add more updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,22 @@
 {
-  "cSpell.words": ["DEEPGRAM"]
+  "svg.preview.background": "black",
+  "cSpell.words": [
+    "chakra",
+    "colord",
+    "ellylabs",
+    "Inpaint",
+    "KINDE",
+    "Lightbox",
+    "Outpaint",
+    "outpainting",
+    "Rembg",
+    "Schnell",
+    "tanstack",
+    "Upscaler",
+    "Upscales",
+    "upscaling",
+    "wavesurfer",
+    "webp",
+    "zustand"
+  ]
 }
