--- a/backend/Test/AppService.API.csproj
+++ b/backend/Test/AppService.API.csproj
@@ -14,6 +14,7 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.10" />
 	  <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="8.0.2" />
+	  <PackageReference Include="NAudio" Version="2.2.1" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="Supabase" Version="1.1.1" />
 	  <PackageReference Include="Supabase.Postgrest" Version="4.0.3" />
